Name:                MaybeT
Version:             0.1.2
Synopsis:            MaybeT monad transformer
Description:         Support for computations with failures.
License:             BSD3
License-file:        LICENSE
Category:            Control
Author:              Eric Kidd <haskell@randomhacks.net>
Maintainer:          Eric Kidd <haskell@randomhacks.net>
Stability:           experimental
Build-Type:          Simple
Build-Depends:       base, mtl
Exposed-modules:     Control.Monad.Maybe
ghc-options:         -Wall 
