---------------------------------------------------------------------------------
--                    --    ---------------------------    --                  --
--                   --    ---  Accelerate TypeLits  ---    --                 --
--                    --    ---------------------------    --                  --
---------------------------------------------------------------------------------

name:                accelerate-typelits
version:             0.1.0.0
synopsis:            a typesafe way encode accelerate matrices and vectors
description:         a small wrapper plus convenience functions on top of
                     accelerate to represent matrices with their dimensions
stability:           experimental
license:             ISC
license-file:        LICENSE
author:              Martin Heuschober
maintainer:          Martin Heuschober <epsilonhalbe [at] gmail [dot] com>
bug-reports:         http://github.com/epsilonhalbe/accelerate-typelit/issues
copyright:           (c) 2016 Martin Heuschober
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
                  ,  Readme.md
                  ,  stack-7.10.yaml
cabal-version:       >=1.22
tested-with:         GHC == 7.10.3

source-repository head
  type:     git
  location: git://github.com/epsilonhalbe/accelerate-typelit

---------------------------------------------------------------------------------
--                                   Library                                   --
---------------------------------------------------------------------------------

library
  exposed-modules:     Data.Array.Accelerate.TypeLits
                 ,     Data.Array.Accelerate.TypeLits.System.Random.MWC
  other-modules:       Data.Array.Accelerate.TypeLits.Internal
  build-depends:       base >=4.8 && <4.9
               ,       accelerate
               ,       accelerate-random
               ,       mwc-random
               ,       smallcheck
               ,       QuickCheck

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

---------------------------------------------------------------------------------
--                                    Tests                                    --
---------------------------------------------------------------------------------

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  --exposed-modules:
  other-modules:       Test.Data.Array.Accelerate.TypeLits
  build-depends:       base >=4.8 && <4.9
               ,       accelerate
               ,       accelerate-random
               ,       accelerate-typelits
               ,       HUnit-Plus
               ,       mwc-random
               ,       QuickCheck
               ,       smallcheck
               ,       tasty
               ,       tasty-hunit
               ,       tasty-quickcheck
               ,       tasty-smallcheck

  hs-source-dirs:      test
  default-language:    Haskell2010

