name:                ghc-typelits-presburger
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/ghc-typelits-presburger#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Math, Type System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

flag examples
    Default: False

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     GHC.TypeLits.Presburger
  other-modules:       GHC.Compat
  build-depends:       base                >= 4.7  && < 5
                     , ghc                 >= 7.10 && < 8.2
                     , ghc-tcplugins-extra >= 0.2  && < 0.3
                     , presburger          >= 1.3  && < 1.4
                     , equational-reasoning >= 0.4.0.0
                     , reflection
  default-language:    Haskell2010

executable simple-arith
  if flag(examples)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      examples
  Main-is:             simple-arith.hs
  build-depends:       base
                     , ghc-typelits-presburger
                     , equational-reasoning
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/konn/ghc-typelits-presburger
