name:                lambdabot-utils
version:             4.2.2
license:             GPL
license-file:        LICENSE
author:              Don Stewart et al.
maintainer:          Jan Stolarek <jan.stolarek@p.lodz.pl>
category:            Development, Web
synopsis:            Utility libraries for the advanced IRC bot, Lambdabot
description:         Lambdabot is an IRC bot written over several years by
                     those on the #haskell IRC channel.
                     .
                     Our own custom libraries for various plugin functions.
                     .
                     AltTime.hs: alternate version of the time library
                     .
                     MiniHTTP.hs: a mini http server
                     .
                     Process.hs: a wrapper over System.Process
                     .
                     Regex.hsc: a fast packed string regex library
                     .
                     Serial.hs:: a serialisation API
                     .
                     Util.hs: miscellaneous string, and other, functions
homepage:            http://haskell.org/haskellwiki/Lambdabot
bug-reports:         https://github.com/killy9999/lambdabot-utils/issues
build-type:          Simple
tested-with:         GHC>=7.6
cabal-version:       >= 1.10

source-repository head
   type:     git
   location: git://github.com/killy9999/lambdabot-utils

library
  default-language: Haskell2010
  build-depends:    base >=4 && <5,
                    binary,
                    bytestring,
                    containers,
                    haskell-src,
                    mtl,
                    network,
                    old-time,
                    process,
                    random,
                    regex-compat,
                    regex-posix,
                    syb,
                    tagsoup > 0.6,
                    unix,
                    utf8-string,
                    zlib

  ghc-options:      -Wall

  exposed-modules:  Lambdabot.AltTime,
                    Lambdabot.Error,
                    Lambdabot.FixPrecedence,
                    Lambdabot.MiniHTTP,
                    Lambdabot.Parser,
                    Lambdabot.Pointful,
                    Lambdabot.Process,
                    Lambdabot.Regex,
                    Lambdabot.Serial,
                    Lambdabot.Signals,
                    Lambdabot.Url,
                    Lambdabot.Util
