Name:                safecopy
Version:             0.1
Description:         Project description
License:             BSD3
License-file:        LICENSE
Author:              David Himmelstrup
Maintainer:          lemmih@gmail.com
Build-Depends:       base, mtl, binary
ghc-options:         -O -fglasgow-exts
Hs-Source-Dirs:      src
Exposed-Modules:
  Data.SafeCopy
  Data.SafeCopy.Types
  Data.SafeCopy.Instances
